# rest-api-tool

./: .gitignore  Cargo.toml  README.md  build.rs  model.yaml
src/: main.rs  model.rs
src/api/: handlers.rs  macros.rs  mod.rs  utils.rs
src/lib/: handler.rs  handlers.rs  macros.rs  mod.rs  util.rs  utils.rs
