[package]
name = "dyn-web"
version = "0.1.0"
edition = "2021"

[build-dependencies]
regex = "1"
serde = "1"
serde_yaml = "0.9"

[dependencies]
data-encoding = "2.3.2"
serde = "1.0.144"
serde_json = "1.0.86"
actix-web = "4"
chrono = "0.4.22"
mongodb = {version = "2.1.0", default-features = false, features = ["sync"]}