[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[build-dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
phf = { version = "0.11", features = ["macros"] }

[dependencies]
data-encoding = "2.3.2"
serde = "1"
serde_json = "1"
actix-web = "4"
chrono = "0.4.22"
mongodb = "2.3.1"
async-trait = "0.1.64"
futures = "0.3.14"
